# imageCompression

./: 2.ppm  2small.ppm  2small2.ppm  3.ppm  CMakeLists.txt  Node.cpp  Node.h  decomp.ppm  main.cpp  output.ppm
